# medallion_dashboard

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
data/: example_api_data.csv
src/: __init__.py  aggregate_gold.py  ingest_bronze.py  ingest_data.py  load_databricks.py  pipeline_prefect.py  validate_gx.py  validate_silver.py
